[gd_scene load_steps=64 format=3 uid="uid://cfvs2l0ywluj3"]

[ext_resource type="Script" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://cjapaw5jxhpc6" path="res://assets/sprites/Hero 01 32.png" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cgpm5cjcrf2tc" path="res://assets/sprites/Sword 01 32.png" id="2_i3pqv"]
[ext_resource type="AudioStream" uid="uid://gnn2ohsw4h6d" path="res://assets/sfx/sword.wav" id="4_hqtel"]

[sub_resource type="AtlasTexture" id="AtlasTexture_345w4"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7doo8"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6s8g"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uph82"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtvkd"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o7lh"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ulw2"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qve2g"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljw6j"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kspnf"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq28a"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha4r6"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8q6u"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tev0t"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cnn8"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dnua"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbg23"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb1bg"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21r24"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuibr"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv7b7"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aimds"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti6rq"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srh5s"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nngix"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6vkr"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggny2"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s02s0"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y30ku"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwl2w"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld727"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr178"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ulw2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_345w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7doo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6s8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uph82")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtvkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o7lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ulw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qve2g")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljw6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kspnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq28a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha4r6")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8q6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tev0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cnn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dnua")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbg23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb1bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21r24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuibr")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv7b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aimds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti6rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srh5s")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nngix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6vkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggny2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s02s0")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y30ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwl2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld727")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr178")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8o7lh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53rpo"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbcqo"]
atlas = ExtResource("2_i3pqv")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1po4a"]
atlas = ExtResource("2_i3pqv")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgd5x"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2bp6"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x46nc"]
atlas = ExtResource("2_i3pqv")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxftp"]
atlas = ExtResource("2_i3pqv")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6c25"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ialpa"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldcvq"]
atlas = ExtResource("2_i3pqv")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j1hd"]
atlas = ExtResource("2_i3pqv")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvjan"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6bl7"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl0oj"]
atlas = ExtResource("2_i3pqv")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lmmp"]
atlas = ExtResource("2_i3pqv")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8y40"]
atlas = ExtResource("2_i3pqv")
region = Rect2(192, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_v6vfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53rpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbcqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1po4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgd5x")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2bp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x46nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxftp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6c25")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ialpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldcvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j1hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvjan")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6bl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl0oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lmmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8y40")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_onrkg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordAnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordAnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_down"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordAnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordAnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_teblm"]
resource_name = "attack_down"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordAnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.200711),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, 48), Vector2(16, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordAnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_down"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordAnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordAnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "attack_left"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordAnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-48, -16), Vector2(-48, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordAnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_left"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordAnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordAnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "attack_right"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordAnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(48, 48), Vector2(48, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordAnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_right"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordAnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordAnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "attack_up"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordAnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, -48), Vector2(-48, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordAnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_up"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordAnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordAnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tp4g5"]
_data = {
"RESET": SubResource("Animation_onrkg"),
"attack_down": SubResource("Animation_teblm"),
"attack_left": SubResource("Animation_sweqy"),
"attack_right": SubResource("Animation_i3pqv"),
"attack_up": SubResource("Animation_hqtel")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(22, 22)

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_i3pqv")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3ulw2")
animation = &"walk_down"
frame_progress = 0.084053
metadata/_edit_lock_ = true

[node name="MovementCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_8o7lh")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 32)

[node name="SwordAnimatedSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_v6vfr")
animation = &"attack_down"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tp4g5")
}
autoplay = "RESET"

[node name="HurtBox" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_i3pqv")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_hqtel")

[node name="AttackSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hqtel")

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
